# Nithya-Clinic

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  test.css  test.html
.history/: .gitignore_20250821173720  .gitignore_20250823195424  .gitignore_20250823200356  main_20250816132418.py  main_20250821183024.py  main_20250821183206.py  main_20250821205945.py  main_20250821231805.py  main_20250821233928.py  main_20250821234838.py  main_20250821234849.py  main_20250821234858.py  main_20250822083337.py  main_20250822123039.py  main_20250822123051.py  main_20250822125716.py
.history/app/db/: firebase_client_20250816143647.py  firebase_client_20250821173804.py  firebase_client_20250821174636.py  firebase_client_20250821174638.py  firebase_client_20250823200048.py  firebase_client_20250901135916.py
.history/frontend/: index_20250821141446.html  index_20250821141448.html  index_20250821172854.html  index_20250821193005.html  index_20250821201209.html  index_20250821201715.html  index_20250909101723.html
app/core/: security.py
app/db/: firebase_client.py  firebase_config.json
app/models/: appointment_model.py  patient_model.py  user_model.py
app/schemas/: appointment_schema.py  auth_schema.py  patient_schema.py  user_schema.py
app/templates/: prescription_template.html
app/utils/: exception_handlers.py  exceptions.py  logger.py  middlewares.py  response.py
frontend/: index.html
frontend/assets/js/: main.js
frontend/components/: navbar.html  sidebar.html
frontend/pages/: view_prescription.html
output/: nithya-clinic_installer_script.iss
(+1124 files in other folders)
